[package]
name = "kvdb"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-common"
description = "Generic key-value trait"
license = "GPL-3.0"
edition = "2018"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

[dependencies]
elastic-array = { version = "0.10", git = "https://github.com/mesalock-linux/elastic-array-sgx" }
bytes = { package = "parity-bytes", version = "0.1", path = "../parity-bytes", default-features = false }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
